[package]
name = "proxy-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
mongodb = "2.2.1"
serde = { version = "1.0.137", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
thiserror = "1.0.31"
serde_json = "1.0.81"
env_logger = "0.9.0"
reqwest = "0.11.10"

